Fix message attachment being too large

--- a/packages/danho-lib/src/styles/components/Message.scss
+++ b/packages/danho-lib/src/styles/components/Message.scss
@@ -34,4 +34,9 @@
   .channel-mention::before {
     content: '#';
   }
+
+  .custom-message__attachments img {
+    max-height: 100%;
+    max-width: 100%;
+  }
 }
